# sqlite-change-stream

./: Cargo.toml  LICENSE  README.md
src/: main.rs
